--- a/_posts/2000-01-04-monday.md
+++ b/_posts/2000-01-04-monday.md
@@ -30,6 +30,8 @@ fa-icon: battery-empty
         <p class="col m12 activity-desc"> {{ activity.text }} </p>
         {% if activity.typeform %}
         <a class="waves-effect waves-light btn bg-{{ page.border-color }}" href="{{ activity.typeform }}" target="blank">Inscrição</a>
+        {% endif %}
+        {% if activity.presentation %}
         <a class="waves-effect waves-light btn bg-{{ page.border-color }}" href="{{ activity.presentation}}" target="blank">Slides</a>
         {% endif %}
       </div>
