added desafios section & changed home

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,11 +1,11 @@
 ---
 title: "home"
 bg: intro
-color: white
+color: grey
 style: center
 ---
 
-![codeweek](img/codeweek-logo.png)
+![codeweek](img/home-logo.png)
 
 ### Outubro 2016 @ DI, Universidade do Minho
 
