added desafios section & changed home

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,11 +1,10 @@
 ---
 title: "home"
-bg: intro
+bg: grey
 color: white
 style: center
 ---
 
 ![codeweek](img/codeweek-logo.png)
 
-### Outubro 2016 @ DI, Universidade do Minho
-
+### Outubro 2015 @ DI, Universidade do Minho
